k8s/system/traefik-dashboard/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: tinyauth-tinyauth-forwardauth@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: System
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: Traefik
    gethomepage.dev/description: Ingress Controller Dashboard
  labels:
    app.kubernetes.io/name: traefik-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.mdeleon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
  tls:
    - hosts:
        - traefik.mdeleon.dev
      secretName: traefik-dashboard-tls-cert
